
*   `v_creator_name` is now called `v_run_branch` (since single runs can also create
    items that are not part of a run branch, so this is no longer misleading`.

*   Results and parameters now issue a warning when they have been stored and you
    change their data

*   Parameters now have a property `v_explored` which is True for explored parameters
    even if the range has been removed


pypet 0.1b.4

*   Annotations and Results now support __setitem__, which is analogue to `f_get` and `f_set`

*   Group Nodes can now contain comments as well

*   Comments are only stored to HDF5 if they are not the empty string

*   Large Overview Tables are off by default

*   BrianDurationParameter was removed and the annotations are used instead.
    Use a normal BrianParameter and instead of `v_order` use `v_annotations.order`

*   The user is advised to use `environment.f_run(manager.run_network)`, instead of
    `environment.f_run(run_network, manager)`

*   Now there is the distinction between `small`, `large`, and `summary` tables

*   BrianMonitorResult: Mean and variance values of State and MultiState Monitors are only
    extracted if they were recorded (which for newer BRIAN versions is only the case if you
    do NOT record traces)

*   Log Level can be passed to environment

*   BUG FIX: Scalars are no longer autoconverted by the storage service to zero-length numpy arrays

*   Names of loggers have been shortened

*   The trajectory now contains the functions `f_delete_item` and `f_delete_items` to erase stuff
    from disk. `f_remove_items` and `f_remove_item` no longer delete data from disk.

*   Loading and deletions of items can now be made with SingleRuns as well.

*   f_iter_nodes now iterates by default recursively all nodes

*   A group node now supports __iter__ which simply calls f_iter_nodes NON recursively

*   The structure of the trees are slightly changed. Results and derived parameters added